[gd_scene load_steps=11 format=3 uid="uid://da47abx5vx1x2"]

[ext_resource type="Texture2D" uid="uid://c1lntvm2awylf" path="res://shared/compass/images/compass.png" id="1_tr5db"]
[ext_resource type="Script" path="res://shared/compass/compass.gd" id="2_fgmvr"]
[ext_resource type="Texture2D" uid="uid://brr3vgd6udmfl" path="res://shared/compass/images/n-disabled.png" id="3_ekhkf"]
[ext_resource type="Texture2D" uid="uid://bxsnie5yrwkj" path="res://shared/compass/images/e-disabled.png" id="4_0iv28"]
[ext_resource type="Texture2D" uid="uid://dhp2usctxr5u" path="res://shared/compass/images/s-disabled.png" id="5_tnokn"]
[ext_resource type="Texture2D" uid="uid://svkdj6d3k7a0" path="res://shared/compass/images/w-disabled.png" id="6_dpq7q"]
[ext_resource type="Texture2D" uid="uid://c7dag214gm0lr" path="res://shared/compass/images/light-e.png" id="6_g7gyh"]
[ext_resource type="Texture2D" uid="uid://d1igh31cdsax3" path="res://shared/compass/images/light-n.png" id="7_b3tdd"]
[ext_resource type="Texture2D" uid="uid://b373u1uoh7kad" path="res://shared/compass/images/light-s.png" id="8_qm3hp"]
[ext_resource type="Texture2D" uid="uid://byt6634eith1r" path="res://shared/compass/images/light-w.png" id="9_165qa"]

[node name="Compass" type="Node2D"]
script = ExtResource("2_fgmvr")

[node name="Compass" type="Sprite2D" parent="."]
texture = ExtResource("1_tr5db")
centered = false

[node name="South" type="Node2D" parent="."]

[node name="SDisabled" type="Sprite2D" parent="South"]
visible = false
texture = ExtResource("5_tnokn")
centered = false

[node name="SHoverArea2D" type="Area2D" parent="South"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="South/SHoverArea2D"]
position = Vector2(0, 0.342621)
scale = Vector2(1, 0.997159)
polygon = PackedVector2Array(144, 147, 126, 152, 109, 147, 126, 235)

[node name="SHover" type="Sprite2D" parent="South/SHoverArea2D"]
visible = false
texture = ExtResource("8_qm3hp")
centered = false

[node name="East" type="Node2D" parent="."]

[node name="EDisabled" type="Sprite2D" parent="East"]
visible = false
texture = ExtResource("4_0iv28")
centered = false

[node name="EHoverArea2D" type="Area2D" parent="East"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="East/EHoverArea2D"]
polygon = PackedVector2Array(151, 108, 153, 124, 149, 143, 237, 126)

[node name="EHover" type="Sprite2D" parent="East/EHoverArea2D"]
visible = false
texture = ExtResource("6_g7gyh")
centered = false

[node name="North" type="Node2D" parent="."]

[node name="NDisabled" type="Sprite2D" parent="North"]
visible = false
texture = ExtResource("3_ekhkf")
centered = false

[node name="NHoverArea2D" type="Area2D" parent="North"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="North/NHoverArea2D"]
polygon = PackedVector2Array(126, 93, 141, 99, 126, 18, 110, 99)

[node name="NHover" type="Sprite2D" parent="North/NHoverArea2D"]
visible = false
texture = ExtResource("7_b3tdd")
centered = false

[node name="West" type="Node2D" parent="."]

[node name="WDisabled" type="Sprite2D" parent="West"]
visible = false
texture = ExtResource("6_dpq7q")
centered = false

[node name="WHoverArea2D" type="Area2D" parent="West"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="West/WHoverArea2D"]
position = Vector2(0, 0.342621)
scale = Vector2(1, 0.997159)
polygon = PackedVector2Array(102, 141.058, 97, 126.015, 102, 107.964, 17, 125.013)

[node name="WHover" type="Sprite2D" parent="West/WHoverArea2D"]
visible = false
texture = ExtResource("9_165qa")
centered = false

[connection signal="input_event" from="South/SHoverArea2D" to="." method="_on_s_hover_area_2d_input_event"]
[connection signal="mouse_entered" from="South/SHoverArea2D" to="." method="_on_s_hover_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="South/SHoverArea2D" to="." method="_on_s_hover_area_2d_mouse_exited"]
[connection signal="input_event" from="East/EHoverArea2D" to="." method="_on_e_hover_area_2d_input_event"]
[connection signal="mouse_entered" from="East/EHoverArea2D" to="." method="_on_e_hover_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="East/EHoverArea2D" to="." method="_on_e_hover_area_2d_mouse_exited"]
[connection signal="input_event" from="North/NHoverArea2D" to="." method="_on_n_hover_area_2d_input_event"]
[connection signal="mouse_entered" from="North/NHoverArea2D" to="." method="_on_n_hover_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="North/NHoverArea2D" to="." method="_on_n_hover_area_2d_mouse_exited"]
[connection signal="input_event" from="West/WHoverArea2D" to="." method="_on_w_hover_area_2d_input_event"]
[connection signal="mouse_entered" from="West/WHoverArea2D" to="." method="_on_w_hover_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="West/WHoverArea2D" to="." method="_on_w_hover_area_2d_mouse_exited"]
